--- a/jana.html
+++ b/jana.html
@@ -16,7 +16,7 @@
                                  </td>
                            <td style="vertical-align: middle;border-top:2px #0cd4d4 solid;border-bottom:2px #0cd4d4 solid; padding: 10px 0;min-width: 290px;">
 						   
-                              <h4 color="#000" style="margin: 0px;font-size: 17px;color: #000;margin-bottom: 11px;">Jana Kerbaj<span style="color:#0cd4d4;font-size: 14px;">| Program Coordinator</span></h3>
+                              <h4 color="#000" style="margin: 0px;font-size: 17px;color: #000;margin-bottom: 11px;">Jana Kerbaj<span style="color:#0cd4d4;font-size: 14px;">| Programs Manager</span></h3>
                               <table cellpadding="0" cellspacing="0" style="margin-top: 5px;">
                                  <tbody>
 								 <tr height="20" style="vertical-align: middle;">
